Picture Resu changed

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							</figure>
 
 							<div class="cd-member-info">
-								John Smith <span>CEO</span>
+								Amin Ahmed <span>Front-end-Dev</span>
 							</div> <!-- cd-member-info -->
 						</a>
 					</li>
@@ -170,12 +170,12 @@
 					<li>
 						<a href="#0" data-type="member-2">
 							<figure>
-								<img src="Images/team-member-1.jpg" alt="Team member 1">
+								<img src="Images/team-member-2.jpg" alt="Team member 2">
 								<div class="cd-img-overlay"><span>View Bio</span></div>
 							</figure>
 
 							<div class="cd-member-info">
-								Cristina Cameron <span>Marketing</span>
+								Roman Hossain Qadri <span>Back-end-Dev</span>
 							</div> <!-- cd-member-info -->
 						</a>
 					</li>
