Team member 3 added and Resu change

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							</figure>
 
 							<div class="cd-member-info">
-								Roman Hossain Qadri <span>Back-end-Dev</span>
+								Roman Hossain Qadiri <span>Back-end-Dev</span>
 							</div> <!-- cd-member-info -->
 						</a>
 					</li>
@@ -183,12 +183,12 @@
 					<li>
 						<a href="#0" data-type="member-3">
 							<figure>
-								<img src="Images/team-member-1.jpg" alt="Team member 1">
+								<img src="Images/team-member-3.jpg" alt="Team member ">
 								<div class="cd-img-overlay"><span>View Bio</span></div>
 							</figure>
 
 							<div class="cd-member-info">
-								Samuel Noel <span>Web Design</span>
+								Robotix <span>None</span>
 							</div> <!-- cd-member-info -->
 						</a>
 					</li>
